<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/register_label"
            android:textSize="38sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding_xlarge"
            android:layout_marginHorizontal="16dp"
            android:text="@string/register_body"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/main_title_small"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/gravityRadioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <xyz.teamgravity.imageradiobutton.GravityRadioGroup
            android:id="@+id/gravityRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding_xlarge"
            android:layout_marginHorizontal="@dimen/default_padding_xlarge"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <xyz.teamgravity.imageradiobutton.GravityImageRadioButton
                android:id="@+id/employer_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="20dp"
                app:girbImage="@drawable/ic_applicant"
                app:girbPressedBackgroundDrawable="@color/white"
                app:girbPressedImageTint="@color/Teal700"
                app:girbPressedTextColor="@color/Teal700"
                app:girbText="@string/employer"
                app:girbUnpressedImageTint="@android:color/darker_gray"
                app:girbUnpressedTextColor="@android:color/darker_gray" />

            <xyz.teamgravity.imageradiobutton.GravityImageRadioButton
                android:id="@+id/applicant_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="20dp"
                app:girbImage="@drawable/ic_employer"
                app:girbPressedBackgroundDrawable="@color/white"
                app:girbPressedImageTint="@color/Teal700"
                app:girbPressedTextColor="@color/Teal700"
                app:girbText="@string/applicant"
                app:girbUnpressedImageTint="@android:color/darker_gray"
                app:girbUnpressedTextColor="@android:color/darker_gray" />


        </xyz.teamgravity.imageradiobutton.GravityRadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding_xlarge"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/user_name"
            android:labelFor="@id/username_register"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
            app:layout_constraintWidth_max="400dp"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconTint="@drawable/focus_change">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/user_name"
                android:imeOptions="actionNext"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding_xlarge"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/password"
            android:labelFor="@id/password_register"
            app:hintAnimationEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintWidth_max="400dp"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@drawable/focus_change">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="@dimen/default_padding_xlarge"
            android:hint="@string/email_label"
            android:labelFor="@id/email_register"
            app:hintAnimationEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/register_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintWidth_max="400dp"
            app:startIconDrawable="@drawable/ic_mail"
            app:startIconTint="@drawable/focus_change">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription=""
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="@dimen/default_padding_xlarge"
            android:layout_marginEnd="32dp"
            android:hint="@string/name_label"
            android:labelFor="@id/name_register"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gravityRadioGroup"
            app:layout_constraintWidth_max="400dp"
            app:startIconDrawable="@drawable/ic_pencil"
            app:startIconTint="@drawable/focus_change">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription=""
                android:imeOptions="actionNext"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/register_button"
            style="@style/ShapeAppearanceOverlay.Material3.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="@dimen/default_padding_xlarge"
            android:text="@string/register"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:layout_constraintWidth_max="400dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>